--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/Icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/Icon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#912cda">
+  <meta name="msapplication-TileColor" content="#912cda">
+  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+  <meta name="theme-color" content="#912cda">
   <link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet">
   <title>Portfolio</title>
   <!-- css -->
@@ -41,15 +50,41 @@
   <main>
     <!-- container -->
     <div class="container">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <blockquote class="blockquote">
+                      <p class="mb-0">"Seja curioso.</p>
+                      <p class="second">Leia muito. Experimente coisas novas.
+                        Eu acho que muito do que as pessoas chamam de inteligência apenas se resume a curiosidade."</p>
+                      <footer class="blockquote-footer">Aaron Swartz </footer>
+                    </blockquote>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="assets/great.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="assets/cancode.jpg" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
       <!-- quote -->
-      <section>
+      <!-- <section>
         <blockquote class="blockquote">
           <p class="mb-0">"Seja curioso.</p>
           <p class="second">Leia muito. Experimente coisas novas.
             Eu acho que muito do que as pessoas chamam de inteligência apenas se resume a curiosidade."</p>
           <footer class="blockquote-footer">Aaron Swartz </footer>
         </blockquote>
-      </section>
+      </section> -->
 
       <!-- sobre mim bar -->
       <div class="about-bar">
@@ -108,27 +143,27 @@
 
         <div class="row" id="row-center">
           <div class="col-lg-4">
-            <img class="imagem img-fluid" src="assets/website.jpg">
+            <a href="#"><img class="imagem img-fluid" alt="portfolio 1" src="assets/website.jpg"></a>
           </div>
 
           <div class="col-lg-4">
-            <img class="imagem img-fluid" src="assets/mobile.jpg">
+            <a href="#"><img class="imagem img-fluid" alt="portfolio 2" src="assets/mobile.jpg"></a>
           </div>
 
           <div class="col-lg-4">
-            <img class="imagem img-fluid" src="assets/responsivo.jpg">
+            <a href="#"><img class="imagem img-fluid" alt="portfolio 3" src="assets/responsivo.jpg"></a>
           </div>
 
           <div class="col-lg-4">
-            <img class="imagem img-fluid" src="assets/media.jpg">
+            <a href="#"><img class="imagem img-fluid" alt="portfolio 4" src="assets/media.jpg"></a>
           </div>
 
           <div class="col-lg-4">
-            <img class="imagem img-fluid" src="assets/soft.jpg">
+            <a href="#"><img class="imagem img-fluid" alt="portfolio 5" src="assets/soft.jpg"></a>
           </div>
 
           <div class="col-lg-4">
-            <img class="imagem img-fluid" src="assets/html.jpg">
+            <a href="#"><img class="imagem img-fluid" alt="portfolio 6" src="assets/html.jpg"></a>
           </div>
       </section>
 
@@ -154,8 +189,7 @@
 
           <div class="form-group">
             <label for="exampleFormControlInput2">Fone</label>
-            <input type="phone" name="phone" class="form-control " id="exampleFormControlInput2 placeholder="
-              (xx)9999-9999">
+            <input type="phone" name="phone" class="form-control " id="exampleFormControlInput2"placeholder="(xx)9999-9999">
           </div>
 
           <div class="form-group">
