--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <!-- formulario -->
       <section class="form-space">
 
-        <form class="form-contact">
+        <form class="form-contact" name="contact" netlify>
           <div class="form-group">
             <label for="exampleFormControlInput1">Nome</label>
             <input type="nome" name="nome" class="form-control " id="exampleFormControlInput1" placeholder="Nome">
